# a2sv-job-portal

./: .gitignore  README.md  pyproject.toml
core/: db.sqlite3
core/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
core/accounts/tasks/: email.py
core/job_portal/: admin.py  models.py  serializers.py  urls.py  views.py
core/project/: settings.py  urls.py
